# clpeak_xshuo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sogou/xshuo/clpeak/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cl_gemm.cpp  cl_gemm_kernel.cpp  cl_gemm_row.cpp  clpeak.cpp  common.cpp  compute_dp.cpp  compute_hp.cpp  compute_integer.cpp  compute_sp.cpp  entry_android.cpp  global_bandwidth.cpp  kernel_latency.cpp  logger_android.cpp  native-lib.cpp  options.cpp  transfer_bandwidth.cpp
app/src/main/cpp/include/: clpeak.h  logger.h
app/src/main/java/com/sogou/xshuo/clpeak/: AboutActivity.java  MainActivity.java  jni_connect.java
app/src/test/java/com/sogou/xshuo/clpeak/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
